--- a/public/index.html
+++ b/public/index.html
@@ -6,16 +6,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="Tom Kra - Web Dev"
-      content="Portfolio and a brief overview of my work as a web developer and about me in person."
+      name="X-DREAM-FIT COACHING by Susi Roth"
+      content="Fitnesstraining, Pilates-, Wirbelsäulen- und Beckenbodentraining, Sekundärprävention, Atemtraining, Aromatherapie, energetische Körperanwendungen by Susi Roth. Susanne Roth
+
+      Margarethe-Schütte-Lihotzky Siedlung 61
+      
+      8605 Kapfenberg"
     />
-    <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon.png" />
+
+    <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
     <link rel="manifest" href="/site.webmanifest" />
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#545144" />
-    <meta name="msapplication-TileColor" content="#f0e6c3" />
-    <meta name="theme-color" content="#f0e6c3" />
+    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#333333" />
+    <meta name="msapplication-TileColor" content="#333333" />
+    <meta name="theme-color" content="#333333" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
