--- a/public/index.html
+++ b/public/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="de">
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta charset="utf-8" />
+    <title>X-DREAM-FIT COACHING by Susi Roth</title>
     <meta
-      name="X-DREAM-FIT COACHING by Susi Roth"
-      content="Fitnesstraining, Pilates-, Wirbelsäulen- und Beckenbodentraining, Sekundärprävention, Atemtraining, Aromatherapie, energetische Körperanwendungen by Susi Roth. Susanne Roth
-
-      Margarethe-Schütte-Lihotzky Siedlung 61
-      
-      8605 Kapfenberg"
+      name="description"
+      content="Fitnesstraining, Pilates-, Wirbelsäulen- und Beckenbodentraining, Sekundärprävention, Atemtraining, Aromatherapie, energetische Körperanwendungen by Susi Roth. Susanne Roth, Margarethe-Schütte-Lihotzky Siedlung 61, 8605 Kapfenberg"
     />
+    <meta
+      name="keywords"
+      content="Fitnesstraining, Pilates, Wirbelsäulen-Training, Beckenbodentraining, Sekundärprävention, Atemtraining, Aromatherapie, energetische Körperanwendungen, Susi Roth, Kapfenberg"
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="theme-color" content="#000000" />
 
     <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon.png" />
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
